<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primaryContainer">

  <LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryContainer">

    <TextView
      android:text="@string/app_name"
      android:textSize="24sp"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/black" />

    <LinearLayout
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:text="@string/info_label_version"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>

      <TextView
        android:text="@string/info_value_version"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:text="@string/info_label_developer"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>

      <TextView
        android:text="@string/info_value_developer"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:text="@string/info_label_contact"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>

      <TextView
        android:text="@string/info_value_contact"
        android:autoLink="email"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"/>
    </LinearLayout>

    <TextView
      android:text="@string/description_title"
      android:textSize="18dp"
      android:textStyle="bold"
      android:textColor="@color/black"
      android:layout_marginTop="24dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:text="@string/info_description"
      android:layout_marginTop="16dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:textColor="@color/black"
      android:textSize="16dp"/>


    <TextView
      android:text="@string/terms_title"
      android:textSize="18dp"
      android:textStyle="bold"
      android:textColor="@color/black"
      android:layout_marginTop="24dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />


    <TextView
      android:text="@string/terms_point_1"
      android:textSize="16sp"
      android:textColor="@color/black"
      android:paddingStart="16dp"
      android:layout_marginTop="12dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:text="@string/terms_point_2"
      android:textSize="16sp"
      android:textColor="@color/black"
      android:paddingStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:text="@string/terms_point_3"
      android:textSize="16sp"
      android:textColor="@color/black"
      android:paddingStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:text="@string/terms_point_4"
      android:textSize="16sp"
      android:textColor="@color/black"
      android:paddingStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:text="@string/terms_point_5"
      android:textSize="16sp"
      android:textColor="@color/black"
      android:paddingStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:text="@string/terms_point_6"
      android:textSize="16sp"
      android:textColor="@color/black"
      android:paddingStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <ImageView
      android:src="@drawable/escudo_ubu_tc"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_gravity="center"
      android:contentDescription="@string/app_name" />
  </LinearLayout>
</ScrollView>
